<resources>

    <string name="app_name">Andriod Final Project</string>
    <string name="GUI">Look at my GUI</string>
    <string name="Click">Click here</string>
    <string name="Check">Check this out!</string>
    <string name="Switch">Switch on/off</string>
    <string name="Type">Type here</string>
    <string name="information">Here is more information</string>
    <string name="on">The switch is now on</string>
    <string name="off">The switch is now off</string>
    <string name="undo">Undo</string>
    <string name="enterEmailHeader"> Enter your email address </string>
    <string name="emailInputHint">Type your email here</string>
    <string name="enterpasswordHeader">Type your password</string>
    <string name="login">Log in</string>
    <string name="your_profile">Your profile</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email</string>
    <string name="your_picture">Your picture</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="take_picture_hint">Click button above to take a picture</string>
    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
    <string name="trival">Trival</string>
    <string name="songster">Songster</string>
    <string name="car">Car</string>
    <string name="soccerGames">Soccer Games</string>
    <string name="tg_app_name">Trivia Final Project</string>


    <string name="chat_app_name">Chat Room</string>
    <string name="tg_enter_name">Please enter your name</string>

    <string-array name="spin_qust_num">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>

    <string-array name="spin_qust_typ">
        <item>True and False</item>
        <item>Multiple Choice</item>
        <item>Mixed</item>
    </string-array>

    <string-array name="spin_qust_lvl">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string name="tg_select_q_number">Number of Questions</string>
    <string name="tg_select_5_number">Number of Questions: 5 </string>
    <string name="tg_select_10_number">Number of Questions: 10 </string>
    <string name="tg_select_15_number">Number of Questions: 15 </string>
    <string name="tg_select_20_number">Number of Questions: 20 </string>
    <string name="tg_select_q_type">Type of Questions</string>
    <string name="tg_select_q_level">Level of Questions</string>
    <string name="tg_type_ph">Type Here</string>
    <string name="tg_email_ph">Please Enter Your Email Here</string>
    <string name="tg_total_quest">Total Number of Questions</string>
    <string name="tg_total_correct">Answered Correctly</string>
    <string name="tg_total_incorrect">Total Missed</string>
    <string name="tg_total_score">Your Score</string>
    <string name="tg_total_unanswered">Not Yet Answered</string>
    <string name="tg_total_unanswered_cnt">Unanswered Count</string>
    <string name="tg_QuestionNum_cnt">Total Number Count</string>
    <string name="tg_total_answered">Question Answered</string>
    <string name="tg_total_answered_cnt">Answered Count</string>
    <string name="tg_question_num">Question Number</string>
    <string name="tg_ranking_rk">RANKING</string>

    <string name="del_title">Do you want to delete this?</string>
    <string name="del_msg1">The selected row is: </string>
    <string name="del_msg2">The database id is: </string>

    <string name="tg_clname">Please Your Name to Play</string>
    <string name="tg_name_ph">Lucky Name</string>
    <string name="tg_enter_email">Enter your email address</string>
    <string name="tg_login">Login</string>
    <string name="app_profile">Your Profile</string>
    <string name="tg_name_grt">Enter Name to Play, </string>
    <string name="tg_name_ph2">Your Name</string>
    <string name="tg_set_chlg">Please Choose Your Challenge Combo</string>
    <string name="tg_open">Open</string>
    <string name="tg_close">Close</string>
    <string name="tg_backtomainpage">Home Page</string>
    <string name="zz_gotosong">Gong to Songster</string>
    <string name="zz_gototrivia">Gong to Trivia</string>
    <string name="zz_gotosoccer">Gong to Soccer</string>
    <string name="zz_gotocar">Gong to Car</string>
    <string name="tg_ranking">Score Ranking</string>
    <string name="tg_playagain">Play Again</string>
    <string name="tg_help">Need Help ?</string>
    <string name="tg_alert_instr1">Instruction on how to use the GUI</string>
    <string name="tg_alert_instr2">(1) Select the game combo you would like to play</string>
    <string name="tg_alert_instr3">(2) Answer all the questions</string>
    <string name="tg_alert_instr4">(3) Click on submit to check your score</string>
    <string name="tg_alert_instr5">(4) You can also check the high history from the toolbar</string>
    <string name="tg_alert_instr_ques"> Are you ready to game ? </string>
    <string name="tg_submitBtn"> SUBMIT </string>
    <string name="tg_quitBtn"> QUIT </string>
    <string name="tg_welcome"> Welcome to the Challenge,  </string>
    <string name="song_welcome">  Welcome to Songster  </string>
    <string name="song_search_art">  Search the artist name </string>
    <string name="song_add_fav"> ADD TO FAVORITE</string>
    <string name="song_rmv_fav"> UNFAVORITE</string>
    <string name="song_already_fav"> The song is already in your favorite list</string>
    <string name="song_to_fav">The following song is added to your favorite list</string>
    <string name="song_fav_selec"> favourites selected</string>
    <string name="song_hp_selec"> Homepage selected</string>





    <string name="song_out_fav">Removed to your favorite list</string>



    <string name="tg_q_go">LET"S GO</string>
    <string name="tg_reset">RESET</string>
    <string name="tg_submit">SUBMIT</string>
    <string name="tg_ranking_tleRK">RANK</string>
    <string name="tg_ranking_tleNM">NAME</string>
    <string name="tg_ranking_tleSC">SCORE</string>
    <string name="tg_blank_line">   ------------------------------------------------------------------------------------------------------   </string>
    <string name="tg_game_name">TRIVIA GAME</string>
    <string name="tg_author">Author: Nicole Yue</string>
    <string name="tg_version">Version: 5.0</string>

    <string name="ss_mainbt">Go</string>
    <string name="song_snackbar1">Lovely song</string>
    <string name="SONG_rm_title">Do you want to delete this？</string>
    <string name="SONG_rm_msg1">"The selected row is: "</string>
    <string name="SONG_rm_msg2">"The database id is: " </string>
    <string name="SONG_p_msg1">"YES"</string>
    <string name="SONG_n_msg2">"NO" </string>
    <string name="songhidetext">Save to favorites</string>
    <string name="title_activity_song_favourite_list">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="song_myfvbtn">My favourites</string>
    <string name="song_menu_search">Search</string>
    <string name="song_menu_home">Home</string>
    <string name="song_menu_fav">Favourites</string>
    <string name="ssfv_open">OPEN</string>
    <string name="song_search">Search</string>

    <string name="song_helptitle">Instruction</string>
    <string name="song_helpMsg1">Search your favorite song and add to favorite</string>
    <string name="song_helpMsg2">Click songID and ArtistID, you can get the guitar music of the song and artist name</string>
    <string name="song_helpMsg3">Click heart button, check what you added in the favorite list.</string>
    <string name="ssfv_close">CLOSE</string>
    <string name="ss_help">Help</string>
    <string name="ss_game_name">Songster</string>
    <string name="ss_author">Ying Li</string>
    <string name="ss_version">Version 4.1</string>


    <!--CARDB-->
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="search">Search</string>
    <string name="delete_from_favourites">Delete From Favourites</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="favourites_lists">Favourites List</string>
    <string name="fill_fields">Please fill in all the fields.</string>
    <string name="last_search">Last Search</string>
    <string name="searching">Searching please wait …</string>
    <string name="insert_into_database">Insert into Database</string>
    <string name="delete_from_database">Delete from Database</string>
    <string name="sync">Sync</string>
    <string name="saved_list">Saved List</string>
    <string name="deleteoption">Are you sure you want to delete?</string>
    <string name="del">Deleted from Database</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="adder">Added to database!</string>
    <string name="make_id">Make ID</string>
    <string name="make_name">Make Name</string>
    <string name="model_id">Model ID</string>
    <string name="model_name">Model Name</string>
    <string name="shop_this_car">Shop this car</string>
    <string name="enter_postal_code">Enter postal code</string>
    <string name="car_detail">Car Detail</string>
    <string name="to_search_by_model_name">To search by Model name</string>
    <string name="search_by_cars">Search by cars</string>
    <string name="add_some_data_here">Add some data here</string>
    <string name="after_searching_by_car">after searching by Car</string>
    <string name="help_us">Help us</string>
    <string name="find_a_car">Find a car</string>
    <string name="search_by_model">Search by Model</string>
    <string name="enter_car_make">Enter a car manufacturer</string>
    <string name="find_this_car">Find this car</string>
    <string name="android">Android</string>
    <string name="cars_project">Cars project</string>
    <string name="java">Java</string>
    <string name="view_car_details">View car details</string>
    <!--CARDB END-->

    <string name="link">Link</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="help">Help</string>
    <string name="back">Back</string>
    <string name="favorite">Favorite</string>
    <string name="addToFav">Add to favorites</string>
    <string name="rating">RATE THIS APP</string>
    <string name="later">LATER</string>
    <string name="openInBrowser">Open in browser</string>
    <string name="removeFromFav">Remove from favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide">Hide</string>
    <string name="app_title">App Title</string>
    <string name="final_project">Final Project CST2335</string>
    <string name="version">Version</string>
    <string name="author">Author: Car (NanChun Chen); Songster (Ying Li) ; SoccerGame (Yang Yang) TriviaGame (Nicole Yue)</string>
    <string name="one">1</string>

    <!-- soccer games -->
    <string name="sc_main_title"> LATEST SOCCER NEWS</string>
    <string name="sc_goal"> GOAL! </string>
</resources>
