<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        />
    <TextView
        android:id="@+id/app_title_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/final_project"/>
    <TextView
        android:id="@+id/app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"/>
    <TextView
        android:id="@+id/app_version_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/one"/>
    <TextView
        android:id="@+id/app_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"/>

</LinearLayout>