<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toTrivia"
        android:title="@string/trival"
            android:icon="@drawable/trivia"
                app:showAsAction="always"/>
    <item
        android:id="@+id/toSongster"
        android:title="@string/songster" android:icon="@drawable/songster"
                app:showAsAction="always"/>
    <item
        android:id="@+id/toCar"
        android:title="@string/car"
        android:icon="@drawable/car"
                app:showAsAction="always"/>
    <item
        android:id="@+id/toSoccerGame"
        android:title="@string/soccerGames"
            android:icon="@drawable/soccer"
            app:showAsAction="always"/>
</menu>