<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/sc_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/sc_link_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        android:text="@string/link"/>
    <TextView
        android:id="@+id/sc_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        />
    <TextView
        android:id="@+id/sc_date_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        android:text="@string/date"/>
    <TextView
        android:id="@+id/sc_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/sc_desc_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        android:text="@string/description"/>
    <TextView
        android:id="@+id/sc_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/saveToFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/addToFav"/>
        <Button
            android:id="@+id/openInBrowser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/openInBrowser"/>
    </LinearLayout>
</LinearLayout>