<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/thelistview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/sendbtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/send"/>

        <EditText
            android:id="@+id/typeline"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/tg_type_ph" />

        <Button
            android:id="@+id/rcvbtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/receive" />
    </LinearLayout>

</LinearLayout>