<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ss_game_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ss_game_name"
        android:textSize="15dp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="5dp"/>
    <TextView
        android:id="@+id/ss_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ss_game_name"
        android:text="@string/ss_author"
        android:textSize="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp" />
    <TextView
        android:id="@+id/ss_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ss_author"
        android:text="@string/ss_version"
        android:textSize="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp" />
</RelativeLayout>