<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundcolor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tg_my_toolbar_rk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EAC5C5"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/tg_ranking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tg_ranking_rk"
        android:textSize="35dp"
        android:layout_below="@+id/tg_my_toolbar_rk"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"/>

    <RelativeLayout
        android:id="@+id/tg_rank_tlgp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tg_ranking">

        <TextView
            android:id="@+id/tg_title_rk"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="30dp"
            android:text="@string/tg_ranking_tleRK"/>

        <TextView
            android:id="@+id/tg_title_nm"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/tg_ranking_tleNM"
            android:layout_marginRight="30dp"
            android:layout_toRightOf="@+id/tg_title_rk"/>

        <TextView
            android:id="@+id/tg_title_lv"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Level Played"
            android:layout_marginRight="30dp"
            android:layout_toRightOf="@+id/tg_title_nm"/>

        <TextView
            android:id="@+id/tg_title_sc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginRight="5dp"
            android:text="@string/tg_ranking_tleSC"

            android:layout_toRightOf="@+id/tg_title_lv"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tg_space_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tg_blank_line"
        android:layout_below="@id/tg_rank_tlgp"/>

    <ListView
        android:id="@+id/tg_ranking_lv"
        android:layout_below="@id/tg_space_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</RelativeLayout>