<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tg_name_grt"
        android:textSize="27dp"
        android:layout_marginTop="20dp"
        android:textColor="#E91E63"
        android:layout_marginRight="10dp"/>

    <EditText
        android:id="@+id/enter_nm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:backgroundTint="@color/material_on_primary_disabled"
        android:layout_toRightOf="@+id/name"/>

    <TextView
        android:id="@+id/set_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tg_set_chlg"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:textSize="20dp"
        android:textColor="#751919"
        android:layout_below="@+id/name"/>

    <GridLayout
        android:id="@+id/choices_pick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_below="@+id/set_challenge">

        <TextView
            android:id="@+id/qust_num"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/tg_select_q_number"
            android:textSize="20dp"
            android:textColor="#E91E63"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="10dp"/>

        <Spinner
            android:id="@+id/q_num_btn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_row="0"
            android:layout_column="1"
            android:background="#A5D14776"
            android:popupBackground="#441717"/>

        <TextView
            android:id="@+id/qust_typ"
            android:layout_width="wrap_content"

            android:layout_height="50dp"
            android:text="@string/tg_select_q_type"
            android:textSize="20dp"
            android:textColor="#E91E63"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginLeft="10dp"/>

        <Spinner
            android:id="@+id/q_typ_btn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_row="1"
            android:layout_column="1"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="#A5D14776"
            android:popupBackground="#441717" />

        <TextView
            android:id="@+id/qust_lvl"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/tg_select_q_level"
            android:textSize="20dp"
            android:textColor="#E91E63"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginLeft="10dp"/>

        <Spinner
            android:id="@+id/q_lvl_btn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:background="#A5D14776"
            android:popupBackground="#441717"
            android:layout_row="2"
            android:layout_column="1"/>

    </GridLayout>

    <Button
        android:id="@+id/q_go_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/choices_pick"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:layout_centerInParent="true"
        android:text="@string/tg_q_go" />

</RelativeLayout>