<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.finalproject_cst2335.car.CarMainActivity">

    <LinearLayout
        android:id="@+id/reletivelayoutone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/carMain_tb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary" />

        <TextView
            android:id="@+id/CarTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/find_a_car"
            android:textColor="#417C6D"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/SearchByModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:hint="@string/search_by_model"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/car_make_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_car_make"
            android:inputType="text" />

        <TextView
            android:id="@+id/last_search_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/last_search" />

        <TextView
            android:id="@+id/last_search_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/last_search" />

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/search" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/toreplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/side_navigation"
        style="@style/NavigationDrawerStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer" />
    <!-- style="@style/NavigationDrawerStyle"
        android:theme="@style/NavigationDrawerStyle"
        app:headerLayout="@layout/nav_header_main"-->
</androidx.drawerlayout.widget.DrawerLayout>